--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -12,7 +12,11 @@
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
- 
+html,body,#app {
+  height: 100%;
+  width: 100%;
+  background: #fafafa;
+}
 /* Sections
    ========================================================================== */
  
